overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  overflow-x: hidden;
+}
+
 :root {
   @apply bg-white;
 }
